# FrameworkBenchmarks

./: Dockerfile
frameworks/Go/fasthttp/: fasthttp-prefork.dockerfile  fasthttp.dockerfile
frameworks/Go/fasthttp/src/: go.mod  go.sum
frameworks/Go/fasthttp/src/handlers/: db.go  handlers.go
frameworks/Java/vertx/: vertx-postgres.dockerfile  vertx.dockerfile
frameworks/Rust/may-minihttp/: Cargo.toml  may-minihttp.dockerfile
toolset/databases/postgres/: postgres.dockerfile
