[package]
name = "may-minihttp"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
edition = "2021"

[dependencies]
atoi = "2.0.0"
bytes = "1.5.0"
num_cpus = "1.16.0"
smallvec = "1.13.1"

log = { version = "0.4.20", features = ["release_max_level_off"] }
mimalloc = { version = "0.1.39", default-features = false }
nanorand = { version = "0.7", default-features = false, features = [
    "std",
    "wyrand",
] }

yarte = { version = "0.15.7", features = ["bytes-buf", "json"] }
buf-min = { version = "0.7.1", features = ["bytes"] }

may = { version = "0.3.42", default-features = false }
may_minihttp = { git = "https://github.com/Xudong-Huang/may_minihttp.git", rev = "f8241e7", default-features = false }
may_postgres = { git = "https://github.com/Xudong-Huang/may_postgres.git", rev = "bf1d86e", default-features = false }

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'
debug = false
incremental = false
overflow-checks = false
